--- a/package_report.Rmd
+++ b/package_report.Rmd
@@ -2,7 +2,9 @@
 title: "Package and Repository Analysis"
 author: "Meet Bhatnagar"
 date: "16/08/2021"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
